# TrackWise

./: .gitignore  README.md
api/: .sample.env  pyproject.toml
api/src/core/: config.py  redis_db.py
api/src/routes/: auth.py
api/src/services/: auth_service.py
client/src/services/: auth.ts
client/src/shared/components/layout/: navbar.tsx
client/src/shared/hooks/: useAuth.tsx
tools/: run-dev
